# esame-16062020-Automedonte

./: CMakeLists.txt  IMG_1173.HEIC  IMG_1174.HEIC  main.cpp
include/: aula.h  corso.h  data.h  docente.h  iscritto.h  lezione.h  ora.h  percorso.h  studente.h
src/: aula.cpp  corso.cpp  docente.cpp  iscritto.cpp  lezione.cpp  percorso.cpp  studente.cpp
